<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ImageView
            android:id="@+id/bg_detail_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/image" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-100dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="110dp"
            android:layout_height="160dp"
            android:layout_gravity="end"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <ImageView
                android:id="@+id/img_detail_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-60dp"
            android:layout_marginEnd="110dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_title_detail"
                android:textSize="20sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/black"
                app:fontFamily="sans-serif-medium" />


        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1A000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="3dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/tagline"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="#999999" />

                        <TextView
                            android:id="@+id/tv_detail_tagline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/example_text"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/black" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="3dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/release_date"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="#999999" />

                        <TextView
                            android:id="@+id/tv_detail_release"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/example_year"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="3dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/duration"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="#999999" />

                        <TextView
                            android:id="@+id/tv_detail_duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/example_text"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="3dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/category"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="#999999" />

                        <TextView
                            android:id="@+id/tv_detail_category"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/example_category"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="15dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/user_score"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="#999999" />

                <com.ramijemli.percentagechartview.PercentageChartView
                    android:id="@+id/percent_user_score"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:pcv_mode="ring"
                    app:pcv_animDuration="800"
                    app:pcv_animInterpolator="anticipate_overshoot"
                    app:pcv_progress="0"
                    app:pcv_textColor="@color/black"
                    app:pcv_startAngle="90" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/img_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:clickable="true"
                        android:layout_margin="16dp"
                        android:background="@drawable/round_corner"
                        app:srcCompat="@drawable/ic_share"
                        android:focusable="true" />

                    <ImageButton
                        android:id="@+id/img_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:clickable="true"
                        android:layout_margin="16dp"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_favorite_border"
                        android:focusable="true" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1A000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="5dp"
                android:text="@string/actor"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="#999999" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_detail_actor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:scrollbars="none" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1A000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#999999"
            app:fontFamily="sans-serif-medium" />


        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/long_lorem_ipsum"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

</LinearLayout>