<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tv_favorite_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>